004.FP, Lambda, Stream API. 3.JDK 1.9, 1.10 Нововведения. 1. Collection API Улучшения