@@ -2,8 +2,6 @@ package ru.job4j.list;
 
 import org.junit.Test;
 
-import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
 import static org.hamcrest.core.Is.is;
 import static org.junit.Assert.assertThat;
@@ -23,9 +21,7 @@ public class ConvertMatrix2ListTest {
                 {1, 2},
                 {3, 4}
         };
-        List<Integer> expect = Arrays.asList(
-                1, 2, 3, 4
-        );
+        List<Integer> expect = List.of(1, 2, 3, 4);
         List<Integer> result = list.toList(input);
         assertThat(result, is(expect));
     }
@@ -37,9 +33,7 @@ public class ConvertMatrix2ListTest {
                 {1},
                 {2}
         };
-        List<Integer> expect = Arrays.asList(
-                1, 2
-        );
+        List<Integer> expect = List.of(1, 2);
         List<Integer> result = list.toList(input);
         assertThat(result, is(expect));
     }
@@ -48,7 +42,7 @@ public class ConvertMatrix2ListTest {
     public void when0on0ArrayThenList0() {
         ConvertMatrix2List list = new ConvertMatrix2List();
         int[][] input = {};
-        List<Integer> expect = new ArrayList<Integer>();
+        List<Integer> expect = List.of();
         List<Integer> result = list.toList(input);
         assertThat(result, is(expect));
     }
